fix(GlSearchBoxByType): fix overlapping clear button and loading icon
Clear button and loading icon were overlapping. Move loading icon to
the left to fix this

--- a/src/components/base/search_box_by_type/search_box_by_type.scss
+++ b/src/components/base/search_box_by_type/search_box_by_type.scss
@@ -1,13 +1,9 @@
 $gl-search-box-by-type-input-padding: 3.5 * $grid-size;
 
-.gl-search-box-by-type-loading-icon,
 .gl-search-box-by-type-search-icon {
   @include gl-m-3;
   @include gl-text-gray-500;
   @include gl-w-5;
-}
-
-.gl-search-box-by-type-search-icon {
   @include gl-absolute;
 }
 
@@ -16,10 +12,13 @@ $gl-search-box-by-type-input-padding: 3.5 * $grid-size;
   @include gl-relative;
 }
 
+.gl-search-box-by-type-loading-icon {
+  @include gl-text-gray-500;
+  @include gl-w-5;
+  @include gl-mr-2;
+}
+
 .gl-search-box-by-type-clear {
-  @include gl-absolute;
-  @include gl-top-2;
-  @include gl-right-2;
   @include gl-z-index-3;
 }
 
@@ -32,7 +31,9 @@ $gl-search-box-by-type-input-padding: 3.5 * $grid-size;
 
 .gl-search-box-by-type-right-icons {
   @include gl-display-flex;
+  @include gl-align-items-center;
   @include gl-line-height-0;
   @include gl-right-0;
   @include gl-absolute;
+  @include gl-h-full;
 }
